Fix vertical scrollbars on Monaco editor page

--- a/CelbridgeEditor/Celbridge/Celbridge.Windows/wwwroot/css/app.css
+++ b/CelbridgeEditor/Celbridge/Celbridge.Windows/wwwroot/css/app.css
@@ -100,6 +100,7 @@ a, .btn-link {
     content: var(--blazor-load-percentage-text, "Loading");
 }
 
-.fill-viewport {
-    height: 95pc;
+.editor-viewport {
+    height: 100vh;
+    overflow: hidden;
 }
